--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
         "vite": "^5.0.3"
     },
     "type": "module",
-    "engines": {
-        "node": ">=18.0.0"
-    },
+"engines": {
+  "node": "20.x"
+}
+
     "dependencies": {
         "@vitejs/plugin-basic-ssl": "^1.1.0"
     }
