--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/node": "^20.12.7",
     "svelte": "^4.2.7",
+  "@sveltejs/adapter-vercel": "^4.0.0",
     "svelte-check": "^3.6.0",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
